# iyin

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  restore_minio.sh
.github/workflows/: ci.yml
apps/api/afs/: __init__.py  auth.py  config.py  database.py  errors.py  main.py  models.py  observability.py  routes.py  schemas.py
apps/web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
apps/web/app/: globals.css  (+2 more)
docs/: admin-guide.md  api.md  approved-source-processing.md  architecture.md  attribution-policy.md  copyright-and-removal-process.md  crawling-policy.md  data-model.md  deployment.md  evaluation.md  final-implementation-report.md  gemini-answer-generation.md  implementation-plan.md  interview-turn-review.md  openai-rag-and-cleanup.md  progress.md  rag-design.md  scrapy-cloud-student.md  security-threat-model.md  source-quality-policy.md  speaker-review.md  troubleshooting.md
fixtures/: approved-docker-sources.json  approved-sources.json  public-domain-research-fixture.md
fixtures/site/: research-fixture.html
infrastructure/caddy/: Caddyfile
infrastructure/docker/: Dockerfile.python  Dockerfile.web
infrastructure/migrations/: env.py
reports/: candidate-inventory.example.csv  discovery-summary.md  youtube-final.jsonl  youtube-more.jsonl
scripts/: fixture_ingestion.py  import_discovery.py  probe_zyte_youtube_transcript.py  process_mixed_interviews.py  seed.py  sync_admin_credentials.py
services/: __init__.py  content.py  providers.py  retrieval.py  scoring.py  security.py  storage.py  urls.py  youtube_ingestion.py
services/crawler/: pyproject.toml  requirements.txt  scrapinghub.yml  scrapy.cfg
services/crawler/afs_crawler/: __init__.py  extensions.py  settings.py
services/crawler/afs_crawler/manifests/: __init__.py
services/crawler/afs_crawler/spiders/: approved.py  discovery.py  youtube.py
services/evaluation/: __init__.py  dataset.py  runner.py
tests/: test_api_contract.py  test_auth.py  test_content.py  test_crawler.py  test_discovery_import.py  test_evaluation.py  test_providers.py  test_retrieval.py  test_scoring.py  test_urls.py  test_youtube_ingestion.py
(+35 files in other folders)
