[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "african-founder-studies-crawler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["scrapy-zyte-api==0.35.0"]

[project.entry-points.scrapy]
settings = "afs_crawler.settings"

[tool.setuptools.packages.find]
include = ["afs_crawler*"]

[tool.setuptools.package-data]
afs_crawler = ["manifests/*.json"]
